--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="do-wrapper">
                 <div class="row flex-ac flex relative" id="reward-header-container" >
                     <img  src="./assets/images/header_image_1x.png" alt="" />
-                    <h2 class="do-reward-header-text col-md-4 offset-4">Let’s get you onboarded!</h2>
+                    <h2 class="do-reward-header-text col-md-6 col-lg-4 offset-4">Let’s get you onboarded!</h2>
                     <!-- <div class=" col-md-4 col-lg-3 offset-1 reward-points">
                         <span class="reward-points-subtext">You have</span>
                         <div class="do-reward-card">
@@ -204,10 +204,10 @@
                         </div>
                         <a class="do-step-heading-text" id="generate-pin-text" onClick="changeStep('2')">
                                 Manage PIN
-                        </a>
-                        <svg class="do-step-arrow" xmlns="http://www.w3.org/2000/svg" width="6" height="9" viewBox="0 0 8 11">
-                            <path fill="none" fill-rule="evenodd" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M1 1l6 4.33L1 10"/>
-                        </svg>
+                            </a>
+                            <svg class="do-step-arrow" xmlns="http://www.w3.org/2000/svg" width="6" height="9" viewBox="0 0 8 11">
+                                <path fill="none" fill-rule="evenodd" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M1 1l6 4.33L1 10"/>
+                            </svg>
                     </div>
                     <div class="do-step-body  col-md-8 offset-4 " id="body-before-otp">
                             <h3 class="do-step-body-title">Manage PIN</h3>
@@ -333,10 +333,10 @@
                                 <span class="step-sub-text  set2 grey hide  ">E-mail ID not verified</span>
                                 <span class="step-sub-text set3 hide ">E-mail ID Verified</span>
                                 <span class="step-sub-text grey set4 hide">E-mail ID not Verified</span>
-                        </a>
-                        <svg class="do-step-arrow" xmlns="http://www.w3.org/2000/svg" width="6" height="9" viewBox="0 0 8 11">
-                            <path fill="none" fill-rule="evenodd" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M1 1l6 4.33L1 10"/>
-                        </svg>
+                            </a>
+                            <svg class="do-step-arrow" xmlns="http://www.w3.org/2000/svg" width="6" height="9" viewBox="0 0 8 11">
+                                <path fill="none" fill-rule="evenodd" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M1 1l6 4.33L1 10"/>
+                            </svg>
                     </div>
                      <!-- you can hide and show <div> with class 'sets' according to data received from backend -->
                     <!-- add 'active' classs which ever set you want to show -->
@@ -799,10 +799,10 @@
                         </div>
                         <a class="do-step-heading-text" id="international-usage-text" onClick="changeStep('4')">
                                 International Usage Activation
-                        </a>
-                        <svg class="do-step-arrow" xmlns="http://www.w3.org/2000/svg" width="6" height="9" viewBox="0 0 8 11">
-                            <path fill="none" fill-rule="evenodd" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M1 1l6 4.33L1 10"/>
-                        </svg>
+                            </a>
+                            <svg class="do-step-arrow" xmlns="http://www.w3.org/2000/svg" width="6" height="9" viewBox="0 0 8 11">
+                                <path fill="none" fill-rule="evenodd" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M1 1l6 4.33L1 10"/>
+                            </svg>
                     </div>
                     <!-- Case1/Set1 when International Usage is not active -->
                     <div class="sets set-1 active">
@@ -895,10 +895,10 @@
                         </span> -->
                         <a class="do-step-heading-text" id="confirmation-text" onClick="changeStep('5')">
                                 Confirmation
-                        </a>
-                        <svg class="do-step-arrow" xmlns="http://www.w3.org/2000/svg" width="6" height="9" viewBox="0 0 8 11">
-                            <path fill="none" fill-rule="evenodd" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M1 1l6 4.33L1 10"/>
-                        </svg>
+                            </a>
+                            <svg class="do-step-arrow" xmlns="http://www.w3.org/2000/svg" width="6" height="9" viewBox="0 0 8 11">
+                                <path fill="none" fill-rule="evenodd" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M1 1l6 4.33L1 10"/>
+                            </svg>
                     </div>
                     <div class="do-step-body  col-md-8 offset-4" id="body-do-confirmation">
                                 <h3 class="do-step-body-title">
